# mini-gpt

./: .gitignore  pyproject.toml
data/: get_data.py
docs/: design.md
nanogpt/: model.py  train.py
nanogpt/utils/: device.py  timing.py
