[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "loguru>=0.7.3",
    "tiktoken>=0.11.0",
    "wandb>=0.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
